Fixed Chat Fixed MaxElemens for shields Fixed wrong padding for leftmenu Fixed Stats

--- a/trunk/styles/css/ingame.css
+++ b/trunk/styles/css/ingame.css
@@ -193,7 +193,7 @@ textarea {
 	list-style:none;
 }
 #planet_menu_content li {
-	height:90px;
+	height:80px;
 	width:80px;
 	float:left;
 	padding:5px;
